--- a/index.html
+++ b/index.html
@@ -2,18 +2,23 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <title>Primero</title>
-    <meta name="author" content="hajar">
+    <title>Taula de Continguts</title>
     <link rel="stylesheet" href="estils.css">
   </head>
   <body>
-    <h1>Títol de nivell 1</h1>
-    <h2>Títol de nivell 2</h2>
-    <h3>Títol de nivell 3</h3>
-    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-    <hr>
-    <div>
-
-    </div>
+    <ul>
+      <li id="a01">
+        <a href="s2m8uf100_Cognom/horari.html">Horari</a>
+      </li>
+      <li id="a02"><a href="s2m8uf101_Cognom/index.html" >Feedly</a></li>
+      <li id="a03"><a href="s2m8uf102_Cognom/index.html">DVD</a></li>
+      <li id="a04" class="anulador"><a href="s2m8uf103_Cognom/index.html">Float</a></li>
+      <li id="a05"><a href="s2m8uf105_Cognom/index.html">Activitat</a></li>
+      <li id="a06"><a href="s2m8uf106_Cognom/index.html">Activitat</a></li>
+      <li id="a07"><a href="s2m8uf107_Cognom/index.html">Activitat</a></li>
+      <li><a href="#">Activitat</a></li>
+      <li><a href="#">Activitat</a></li>
+      <li><a href="#">Activitat</a></li>
+    </ul>
   </body>
 </html>
