--- a/s2m8uf108_regbaoui/html/mesas.html
+++ b/s2m8uf108_regbaoui/html/mesas.html
@@ -19,7 +19,7 @@
       <div class="mesas"><h1>Mesas Disponibles</h1></div>
     </div>
 
-    <div class="atras"><a href="inicio.html"><p>⮌</p></a></div>
+    <div class="atras"><a href="inicio.html"><p>&#8617;</p></a></div>
 
 
     <div class="container"><p>1</p></div>
