--- a/s2m8uf108_regbaoui/html/pedidoslistos.html
+++ b/s2m8uf108_regbaoui/html/pedidoslistos.html
@@ -19,7 +19,7 @@
       <div class="mesas"><h1>Pedidos Listos</h1></div>
     </div>
 
-    <div class="atras"><a href="inicio.html"><p>⮌</p></a></div>
+    <div class="atras"><a href="inicio.html"><p>&#8617;</p></a></div>
 
 
     <div class="container" id= "listo"><p class="midle">1</p></div>
