--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <ul>
       <div class="">
         <li id="a01"><a href="M07/index.html">M07</a></li>
-        <li id="a02"><a href="M08/index.html">M08</a></li>
+        <li id="a02"><a href="M08.html">M08</a></li>
       </div>
     </ul>
   </body>
